--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <script src="./index.html" type="module"></script>
+        <script src="./js.js" type="module"></script>
     </body>
 </html>
